# sentinel

./: .env.example  README.md  render.yaml
agents/: buyer-agent.ts  claim-verifier.ts  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: ch_sink.py  clients.py  config.py  interrogate.py  notify.py  publish.py  sentinel.py  server.py  telemetry.py  test_vendor.py  thesys.py  x402.py
backend/app/pipeline/: extract.py  ingest.py
backend/scripts/: backfill_clickhouse.py  demo_queries.sql
docs/: airbyte-clickhouse-cloud.md
frontend/: vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ActivityFeed.tsx  InterrogatePanel.tsx
sponsor/: tools.md
